force-app/main/default/objects/Banking_Transaction__dlm/Banking_Transaction__dlm.object-meta.xml
<CustomObject>
    <label>Banking Transaction</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Sampled banking transactions with fraud labels</description>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Banking Transaction</labelOverride>
        <masterLabel>Banking Transaction</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>