force-app/main/default/objects/Banking_Transaction__dlm/fields/KQ_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>KQ_Transaction_Id__c</fullName>
    <label>Key Qualifier Transaction_Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Transaction_Id</labelOverride>
        <masterLabel>Key Qualifier Transaction_Id</masterLabel>
        <refAttrDeveloperName>KQ_Transaction_Id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>