force-app/main/default/objects/Banking_Transaction__dlm/fields/V10__c.field-meta.xml
<CustomField>
    <fullName>V10__c</fullName>
    <label>V10</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>V10</labelOverride>
        <masterLabel>V10</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>