force-app/main/default/objects/Banking_Transaction__dlm/fields/V11__c.field-meta.xml
<CustomField>
    <fullName>V11__c</fullName>
    <label>V11</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>V11</labelOverride>
        <masterLabel>V11</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>