force-app/main/default/objects/Banking_Transaction__dlm/fields/V12__c.field-meta.xml
<CustomField>
    <fullName>V12__c</fullName>
    <label>V12</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>V12</labelOverride>
        <masterLabel>V12</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>